[package]
name = "emergency"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
grand = { git = "https://github.com/A31Nesta/grand" }
rand = "0.9.1"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"]}
tower-http = { version = "0.6.4", features = ["cors"] }