[package]
name = "emergency"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
axum-extra = "0.10.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
grand = { git = "https://github.com/A31Nesta/grand" }
rand = "0.9.1"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"]}
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "cors", "normalize-path"] }
